particles crash with viewport render #37195

Closed
opened 2013-10-23 18:41:36 +02:00 by Joseph Masaki · 4 comments

%%%--- Operating System, Graphics card ---
Tested on:

  • Win64 Home Premium

  • GeForce GT 555M

  • Intel Core i5-2430 2.40 GHz

  • 8 gigs of ram
    Have also tested on my Xubuntu laptop.

    • Blender version with error, and version that worked ---
      Every version I've tried it on.

    • Short description of error ---
      Blender crashes when you follow instructions bellow.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---

  • Bring up space search

  • Type "quick fur" and press enter

  • Tab into edit mode

  • Switch to rendered viewport

  • press x and delete vertices%%%

%%%--- Operating System, Graphics card --- Tested on: - Win64 Home Premium - GeForce GT 555M - Intel Core i5-2430 2.40 GHz - 8 gigs of ram Have also tested on my Xubuntu laptop. - Blender version with error, and version that worked --- Every version I've tried it on. - Short description of error --- Blender crashes when you follow instructions bellow. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - Bring up space search - Type "quick fur" and press enter - Tab into edit mode - Switch to rendered viewport - press x and delete vertices%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%can confirm this.

backtrace:

0 _int_malloc /lib64/libc.so.6 0x37b4a7de8c
1 calloc /lib64/libc.so.6 0x37b4a80a7a
2 MEM_lockfree_callocN mallocn_lockfree_impl.c 220 0x26f2f4b
3 RE_addRenderInstance renderdatabase.c 1372 0x1df0f0e
4 add_render_object convertblender.c 4842 0x1d9befe
5 init_render_object convertblender.c 4862 0x1d9bfcc
6 database_init_objects convertblender.c 5257 0x1d9d39f
7 RE_Database_FromScene convertblender.c 5345 0x1d9d7e1
8 render_view3d_startjob render_internal.c 957 0x1cdcd2b
9 do_job_thread wm_jobs.c 322 0x18abcaa
10 tslot_thread_start threads.c 250 0x253d204
11 start_thread /lib64/libpthread.so.0 0x37b5207c53
12 clone /lib64/libc.so.6 0x37b4af5e1d%%%

%%%can confirm this. backtrace: 0 _int_malloc /lib64/libc.so.6 0x37b4a7de8c 1 calloc /lib64/libc.so.6 0x37b4a80a7a 2 MEM_lockfree_callocN mallocn_lockfree_impl.c 220 0x26f2f4b 3 RE_addRenderInstance renderdatabase.c 1372 0x1df0f0e 4 add_render_object convertblender.c 4842 0x1d9befe 5 init_render_object convertblender.c 4862 0x1d9bfcc 6 database_init_objects convertblender.c 5257 0x1d9d39f 7 RE_Database_FromScene convertblender.c 5345 0x1d9d7e1 8 render_view3d_startjob render_internal.c 957 0x1cdcd2b 9 do_job_thread wm_jobs.c 322 0x18abcaa 10 tslot_thread_start threads.c 250 0x253d204 11 start_thread /lib64/libpthread.so.0 0x37b5207c53 12 clone /lib64/libc.so.6 0x37b4af5e1d%%%

%%%fixed 60951.%%%

%%%fixed 60951.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37195
No description provided.