fix [#37195] particles crash with viewport render